# elaUIDtool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  elaUIDtool.bat  install_windows.bat  prepare_reader.bat  pyproject.toml  run_interactive.bat  run_reference_test.bat  run_tests.bat
docs/: ARCHITECTURE.md  GITHUB_SETUP.md  READER_PREPARATION.md  VERSIONING.md
scripts/: check_version.py
src/elatec_uid_tool/: __init__.py  analysis_commands.py  analyzer.py  cli.py  commands.py  firmware.py  match_output.py  medium_output.py  ports.py  presentation.py  protocol.py  reader_commands.py  tagtypes.py
tests/: test_analyzer.py  test_protocol.py  test_workflow.py
